updated app js filewith activites fetch
